# fuzzer

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
resources/wordlists/: README.md
src/fuzzer/adapters/: auth_default.py  craw_default.py  prob_default.py  util_default.py
src/fuzzer/auth/: auth.py
src/fuzzer/config/: defaults.yaml
src/fuzzer/core/: base_crawler.py  base_fuzzer.py  baseline.py  cli.py  probes.py
src/fuzzer/crawler/: dynamic_crawler.py
src/fuzzer/fuzzers/: sql_iblind.py  sql_iparam.py  xss_dom.py  xss_stored.py
src/fuzzer/phases/: dom.py  forms.py  fuzzer_phases.py
src/fuzzer/runtime/: context.py  ports.py
src/main/: auth.py  controller.py  crawler.py  llm.py  pathFuzzer.py  sqliFuzzer.py  xssFuzzer.py
src/uni_fuzzer/adapters/: auth_default.py  base_default.py  dete_default.py  fuzz_default.py  llm_default.py  repo_default.py
src/uni_fuzzer/auth/: auth.py
src/uni_fuzzer/config/: defaults.yaml
src/uni_fuzzer/core/: base_fuzzer.py  baseline.py  cli.py  controller.py  fuzzer_phases.py  logging.py  probes.py  reporting.py  utility.py
src/uni_fuzzer/crawler/: crawler.py  dynamic_crawler.py  static_crawler.py
src/uni_fuzzer/fuzzers/: detection.py  path.py  path_param.py  path_traversal.py  sql_iblind.py  sql_inj.py  sql_iparam.py  sqli.py  xss.py  xss_dom.py  xss_form.py  xss_param.py  xss_stored.py
src/uni_fuzzer/llm/: semantic_llm.py
tests/: test_content_detection.py  test_findings.py  test_payloads.py  test_sql_detection.py  test_url_helpers.py  test_xss_detection.py
(+9 files in other folders)
