[project]
name = "uni-fuzzer"
version = "0.1.0"
requires-python = ">=3.10"

dependencies = [
  "requests>=2.31",
  "orjson>=3.10",
  "PyYAML>=6.0",
  "beautifulsoup4>=4.12",
  "selenium>=4.22",
  "sentence-transformers>=2.6",
  "webdriver-manager>=4.0",
]

[project.scripts]
fuzz = "uni_fuzzer.core.cli:main"