[project]
name = "fuzzer"
version = "0.1.0"
requires-python = ">=3.10"

dependencies = [
  "requests>=2.31",
  "orjson>=3.10",
  "PyYAML>=6.0",
  "beautifulsoup4>=4.12",
  "selenium>=4.22",
  "sentence-transformers>=2.6",
  "webdriver-manager>=4.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
fuzz = "fuzzer.core.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]